test/error/0004-tags5.c
/*
PATTERN: incomplete
PATTERN: c:7:
*/

struct X;
struct X { struct X x; };
